objects/X7S_Image_Gallery_Entry__c/X7S_Image_Gallery_Entry__c.object-meta.xml
<CustomObject>
    <label>7S Image Gallery Entry</label>
    <nameField>
        <label>Image Gallery Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Image Gallery Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>