objects/X7S_Image_Gallery_Entry__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>