objects/X7S_Image_Gallery_Entry__c/fields/X7S_Image_Gallery__c.field-meta.xml
<CustomField>
    <fullName>X7S_Image_Gallery__c</fullName>
    <label>7S Image Gallery</label>
    <referenceTo>X7S_Image_Gallery__c</referenceTo>
    <relationshipName>Gallery_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>